--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="row">
 			<label class="required" for="email">Email</label><br>
-			<input id="email" class="input" type="text" placeholder="Entrez votre nom" name="email" value="" size="30"><br>
+			<input id="email" class="input" type="text" placeholder="Entrez votre email" name="email" value="" size="30"><br>
 			<span id="email_validation" class="error_message"></span>
 		</div>
 		
